Added some error handling to movie controller.
