# swagger.json
@@ -28,6 +28,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       },
@@ -43,16 +46,16 @@
                 "title": {
                   "example": "any"
                 },
-                "lastName": {
+                "releaseYear": {
                   "example": "any"
                 },
-                "email": {
+                "genre": {
                   "example": "any"
                 },
-                "favoriteColor": {
+                "director": {
                   "example": "any"
                 },
-                "birthday": {
+                "rating": {
                   "example": "any"
                 },
                 "writer": {
@@ -68,6 +71,9 @@
         "responses": {
           "201": {
             "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "500": {
             "description": "Internal Server Error"
@@ -92,6 +98,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       },
@@ -113,16 +122,16 @@
                 "title": {
                   "example": "any"
                 },
-                "lastName": {
+                "releaseYear": {
                   "example": "any"
                 },
-                "email": {
+                "genre": {
                   "example": "any"
                 },
-                "favoriteColor": {
+                "director": {
                   "example": "any"
                 },
-                "birthday": {
+                "rating": {
                   "example": "any"
                 },
                 "writer": {
@@ -142,6 +151,9 @@
           "204": {
             "description": "No Content"
           },
+          "400": {
+            "description": "Bad Request"
+          },
           "500": {
             "description": "Internal Server Error"
           }
@@ -160,6 +172,9 @@
         "responses": {
           "204": {
             "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "500": {
             "description": "Internal Server Error"
